language_tests/source_files/valid/inferred_some_method_arg_expectation_check.tr
// CHECK_ONLY

import std.collections.List

func pushSome[Key](_ values: &mut List[Key?], _ key: Key) {
    values.append(.some(key))
}

func main() {
    var values: List[int32?] = List()
    pushSome(&mut values, 10)
}
